Slight changes in imports

--- a/model/Bert_Classifier.ipynb
+++ b/model/Bert_Classifier.ipynb
@@ -51,12 +51,12 @@
       "source": [
         "# TODO: delete these commented imports. Right now, not deleting them because we might want to use them later.\n",
         "\n",
-        "# import os\n",
+        "import os\n",
         "\n",
-        "# import numpy as np\n",
-        "# import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
         "\n",
-        "# import tensorflow as tf\n",
+        "import tensorflow as tf\n",
         "\n",
         "# import tensorflow_hub as hub\n",
         "\n",
@@ -76,7 +76,7 @@
         "# import official.nlp.modeling.networks\n",
         "\n",
         "# import from our library\n",
-        "import hyperparameters.HP as hp\n",
+        "from hyperparameters import HP\n",
         "import bert_model\n",
         "import preprocessing"
       ],
@@ -94,7 +94,7 @@
         }
       },
       "source": [
-        "model = bert_model.build_Bert_token_classifier(hp.hub_model_name, 'dense')\n",
+        "model = bert_model.build_Bert_token_classifier(HP.hub_model_name, 'dense')\n",
         "\n",
         "tf.keras.utils.plot_model(model, show_shapes=True, dpi=64)"
       ],
