take care of preprocessing issue

--- a/Bert_Classifier.ipynb
+++ b/Bert_Classifier.ipynb
@@ -115,8 +115,7 @@
         }
       },
       "source": [
-        "# TODO: delete these commented imports. Right now, not deleting them because we might want to use them later.\n",
-        "\n",
+        "import importlib\n",
         "import os\n",
         "\n",
         "import numpy as np\n",
@@ -124,33 +123,100 @@
         "\n",
         "import tensorflow as tf\n",
         "\n",
-        "import tensorflow_hub as hub\n",
-        "\n",
-        "# from official.modeling import tf_utils\n",
-        "# from official import nlp\n",
-        "# from official.nlp import bert\n",
-        "\n",
-        "# # Load the required submodules\n",
-        "# import official.nlp.optimization\n",
-        "# import official.nlp.bert.bert_models\n",
-        "# import official.nlp.bert.configs\n",
-        "# import official.nlp.bert.run_classifier\n",
-        "# import official.nlp.bert.tokenization\n",
-        "# import official.nlp.data.classifier_data_lib\n",
-        "# import official.nlp.modeling.losses\n",
-        "# import official.nlp.modeling.models\n",
-        "# import official.nlp.modeling.networks\n",
-        "\n",
         "# import from our library\n",
-        "from model.hyperparameters import HP\n",
-        "import model.bert_model\n",
-        "import model.preprocessing\n",
-        "\n",
-        "import importlib\n",
-        "importlib.reload(bert_model)"
+        "from model import bert_model, hyperparameters, preprocessing\n",
+        "from model.hyperparameters import HP"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "source": [
+        "## Fetch Data"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cNgQePrgH1FU",
+        "tags": []
+      },
+      "source": [
+        "importlib.reload(preprocessing)\n",
+        "\n",
+        "DL = preprocessing.DataLoader(HP.data_dir, HP.bert_dir, HP.max_seq_len)\n",
+        "train_input, train_target, val_input, val_target = DL.get_train_data(print_ex=2)"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "keys in train_dict: dict_keys(['id', 'word_seq', 'tag_seq'])\n",
+            "keys in val_dict: dict_keys(['id', 'word_seq', 'tag_seq'])\n",
+            "keys in test_dict: dict_keys(['id', 'word_seq'])\n",
+            "{'_t_pad_': 0, '[INV]': 1, '[CLS]': 2, '[SEP]': 3, 'INDIVIDUAL_BEHAVIOR': 4, 'O': 5, 'LANGUAGE': 6, 'GROUP': 7, 'CARDINAL': 8, 'LABORATORY_PROCEDURE': 9, 'BODY_PART_ORGAN_OR_ORGAN_COMPONENT': 10, 'HUMAN-CAUSED_PHENOMENON_OR_PROCESS': 11, 'EVENT': 12, 'GROUP_ATTRIBUTE': 13, 'PHYSICAL_SCIENCE': 14, 'DAILY_OR_RECREATIONAL_ACTIVITY': 15, 'BACTERIUM': 16, 'DATE': 17, 'WORK_OF_ART': 18, 'LABORATORY_OR_TEST_RESULT': 19, 'CELL_OR_MOLECULAR_DYSFUNCTION': 20, 'FOOD': 21, 'VIRUS': 22, 'MATERIAL': 23, 'NORP': 24, 'GOVERNMENTAL_OR_REGULATORY_ACTIVITY': 25, 'FAC': 26, 'EVOLUTION': 27, 'SIGN_OR_SYMPTOM': 28, 'LIVESTOCK': 29, 'QUANTITY': 30, 'ORG': 31, 'CHEMICAL': 32, 'SOCIAL_BEHAVIOR': 33, 'ANATOMICAL_STRUCTURE': 34, 'TIME': 35, 'DISEASE_OR_SYNDROME': 36, 'THERAPEUTIC_OR_PREVENTIVE_PROCEDURE': 37, 'SUBSTRATE': 38, 'EXPERIMENTAL_MODEL_OF_DISEASE': 39, 'PRODUCT': 40, 'ARCHAEON': 41, 'GENE_OR_GENOME': 42, 'CELL_FUNCTION': 43, 'GPE': 44, 'MOLECULAR_FUNCTION': 45, 'ORGAN_OR_TISSUE_FUNCTION': 46, 'CORONAVIRUS': 47, 'LOC': 48, 'TISSUE': 49, 'VIRAL_PROTEIN': 50, 'CELL': 51, 'LAW': 52, 'PERCENT': 53, 'DIAGNOSTIC_PROCEDURE': 54, 'ORDINAL': 55, 'INJURY_OR_POISONING': 56, 'MONEY': 57, 'CELL_COMPONENT': 58, 'MACHINE_ACTIVITY': 59, 'BODY_SUBSTANCE': 60, 'EDUCATIONAL_ACTIVITY': 61, 'EUKARYOTE': 62, 'RESEARCH_ACTIVITY': 63, 'ORGANISM': 64, 'IMMUNE_RESPONSE': 65, 'WILDLIFE': 66, 'PERSON': 67}\n",
+            "*** Example ***\n",
+            "tokens: [CLS] Protection of ca ##lves against fatal enter ##ic co ##li ##ba ##ci ##llo ##sis by oral ##ly administered E ##scher ##ichi ##a co ##li K ##9 ##9 - specific mon ##oc ##lon ##al anti ##body . A mon ##oc ##lon ##al anti ##body ( MCA ) to enter ##oto ##xi ##genic E ##scher ##ichi ##a co ##li K ##9 ##9 anti ##gen a ##gg ##lut ##inated K ##9 ##9 + enter ##oto ##xi ##genic E . co ##li strains B ##44 ( O ##9 : K ##30 ; K ##9 ##9 ; F ##41 : H - ) and B ##41 ( O ##10 ##1 : K ##9 ##9 ; F ##41 : H - ) grown at 37 degrees C but not at 18 degrees [SEP]\n",
+            "input_ids: 101 8063 1104 11019 14455 1222 11874 3873 1596 1884 2646 2822 6617 6643 4863 1118 9619 1193 8318 142 27826 11985 1161 1884 2646 148 1580 1580 118 2747 19863 13335 4934 1348 2848 14637 119 138 19863 13335 4934 1348 2848 14637 113 24955 114 1106 3873 12355 8745 19438 142 27826 11985 1161 1884 2646 148 1580 1580 2848 4915 170 9705 25937 16868 148 1580 1580 116 3873 12355 8745 19438 142 119 1884 2646 21116 139 25041 113 152 1580 131 148 13144 132 148 1580 1580 132 143 25892 131 145 118 114 1105 139 25892 113 152 10424 1475 131 148 1580 1580 132 143 25892 131 145 118 114 4215 1120 3413 4842 140 1133 1136 1120 1407 4842 102\n",
+            "input_mask: 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+            "segment_ids: 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+            "label_ids: 2 5 5 29 1 5 5 36 1 36 1 1 1 1 1 5 42 1 42 42 1 1 1 42 1 42 1 1 5 8 8 1 1 1 8 1 5 5 32 1 1 1 32 1 5 42 5 5 32 1 1 1 32 1 1 1 32 1 5 1 1 5 1 5 1 1 1 42 1 1 1 42 1 1 1 42 5 32 1 32 32 1 5 5 1 5 5 1 5 5 1 1 5 5 1 5 5 1 5 5 32 1 5 40 1 1 5 5 1 1 5 5 1 5 5 1 5 5 5 30 30 5 5 5 5 30 30 3\n",
+            "*** Example ***\n",
+            "tokens: [CLS] A Co ##mp ##aris ##on of the Cambodian and the South Korean Health Care System In discussions of health care reform , the Korean system is held up as a possible model for the Cambodia . The two countries ' health care systems are very different based on some parameters . Cambodia is an agriculture and developing country . Table 1 ) . The refer ##ral arrangement system in Republic of Korea is divided into two steps . The patient can go to any medical practitioner office except specialized general hospitals . If the patient wants to go to a secondary hospital , he / she has to present a refer ##ral slip issued by the medical practitioner who diagnosed him / her first . 2 [SEP]\n",
+            "input_ids: 101 138 3291 8223 26464 1320 1104 1103 27463 1105 1103 1375 3947 3225 8396 3910 1130 10508 1104 2332 1920 5851 117 1103 3947 1449 1110 1316 1146 1112 170 1936 2235 1111 1103 13101 119 1109 1160 2182 112 2332 1920 2344 1132 1304 1472 1359 1113 1199 11934 119 13101 1110 1126 6487 1105 4297 1583 119 11389 122 114 119 1109 5991 4412 6204 1449 1107 2250 1104 3577 1110 3233 1154 1160 3343 119 1109 5351 1169 1301 1106 1251 2657 22351 1701 2589 7623 1704 8894 119 1409 1103 5351 3349 1106 1301 1106 170 3718 2704 117 1119 120 1131 1144 1106 1675 170 5991 4412 7324 3010 1118 1103 2657 22351 1150 11534 1140 120 1123 1148 119 123 102\n",
+            "input_mask: 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+            "segment_ids: 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+            "label_ids: 2 5 5 1 1 1 5 5 24 5 5 5 5 42 42 5 5 37 5 32 32 32 5 5 32 5 5 5 5 5 5 5 5 5 5 51 5 5 8 5 5 42 42 5 5 5 5 5 5 5 5 5 36 5 5 5 5 5 5 5 5 5 5 5 5 5 1 5 5 5 5 5 32 5 5 5 8 5 5 5 64 5 5 5 5 7 7 5 5 5 5 5 5 5 5 64 5 5 5 5 5 5 5 5 5 1 5 5 5 5 5 5 1 5 5 5 5 7 7 5 5 5 1 1 55 5 5 3\n",
+            "*** Example ***\n",
+            "tokens: [CLS] I ##mm ##une pathways and defence mechanisms in honey bees A ##pis me ##lli ##fer ##a Social insects are able to mount both group - level and individual defences against path ##ogen ##s . Here we focus on individual defences , by presenting a genome - wide analysis of immunity in a social insect , the honey bee A ##pis me ##lli ##fer ##a . We present honey bee models for each of four signalling pathways associated with immunity , identifying plausible or ##th ##olo ##gues for nearly all predicted pathway members . When compared to the sequence ##d Dr ##oso ##phi ##la and An ##op ##hel ##es genome ##s , honey bees possess roughly one - third as many genes in 17 gene families implicated [SEP]\n",
+            "input_ids: 101 146 6262 10038 19530 1105 6465 10748 1107 8531 18568 138 19093 1143 6473 6732 1161 3563 9895 1132 1682 1106 11885 1241 1372 118 1634 1105 2510 18422 1222 3507 19790 1116 119 3446 1195 2817 1113 2510 18422 117 1118 11124 170 15519 118 2043 3622 1104 17523 1107 170 1934 15754 117 1103 8531 17775 138 19093 1143 6473 6732 1161 119 1284 1675 8531 17775 3584 1111 1296 1104 1300 25498 19530 2628 1114 17523 117 12760 27918 1137 1582 12805 17423 1111 2212 1155 10035 13548 1484 119 1332 3402 1106 1103 4954 1181 1987 22354 27008 1742 1105 1760 4184 18809 1279 15519 1116 117 8531 18568 10192 4986 1141 118 1503 1112 1242 9077 1107 1542 5565 2073 22512 102\n",
+            "input_mask: 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+            "segment_ids: 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+            "label_ids: 2 5 1 1 5 5 32 32 5 42 42 42 1 42 1 1 1 5 5 5 5 5 5 5 5 1 1 5 5 5 5 5 1 1 5 5 5 5 5 5 5 5 5 5 5 5 1 1 5 5 65 5 5 5 32 5 5 32 32 32 1 32 1 1 1 5 5 5 32 32 5 5 5 5 8 32 32 5 5 65 5 5 5 5 1 1 1 5 5 5 5 5 7 5 5 5 5 5 5 1 62 1 1 1 5 62 1 1 1 5 1 5 32 32 5 8 8 1 1 5 5 5 5 5 5 7 5 3\n",
+            "*** Example ***\n",
+            "tokens: [CLS] Part ##ici ##pa ##tory e ##pid ##em ##iology at the neo ##tro ##pic ##s : study of diseases of backyard livestock and description of hunting patterns in U ##ax ##act ##ún , Maya Reserve B ##ios ##phere , Guatemala BA ##C ##K ##GR ##O ##UN ##D : The intention of the following study was to describe the inter ##rel ##ations ##hip between villagers , domestic animals and wildlife at the Community Forestry Con ##cession of U ##ax ##act ú ##n , Guatemala by means of part ##ici ##pa ##tory e ##pid ##em ##iol ##ogical methods . The main focus was generating information regarding different livestock diseases considered important by villagers and their relevance , as well as obtaining knowledge concerning hunting activities and cooking methods to [SEP]\n",
+            "input_ids: 101 4539 27989 4163 6207 174 25786 5521 17288 1120 1103 15242 8005 20437 1116 131 2025 1104 8131 1104 18707 12490 1105 6136 1104 5693 6692 1107 158 7897 11179 26784 117 9738 5081 139 10714 13591 117 11835 12465 1658 2428 27617 2346 27370 2137 131 1109 6247 1104 1103 1378 2025 1108 1106 5594 1103 9455 9261 6006 3157 1206 12453 117 4500 3551 1105 10501 1120 1103 3704 23077 16752 16122 1104 158 7897 11179 272 1179 117 11835 1118 2086 1104 1226 27989 4163 6207 174 25786 5521 19840 20946 4069 119 1109 1514 2817 1108 12713 1869 4423 1472 12490 8131 1737 1696 1118 12453 1105 1147 25319 117 1112 1218 1112 11621 3044 6995 5693 2619 1105 8739 4069 1106 102\n",
+            "input_mask: 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+            "segment_ids: 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+            "label_ids: 2 32 1 1 1 32 1 1 1 5 5 5 1 1 1 5 5 5 5 5 64 64 5 5 5 5 5 5 5 1 1 1 5 7 5 5 1 1 5 32 5 1 1 1 1 1 1 5 5 5 5 5 5 5 5 5 5 5 5 1 1 1 5 5 5 5 5 5 66 5 5 5 5 5 1 5 32 1 1 5 1 5 32 5 5 5 5 1 1 1 5 1 1 1 1 5 5 5 5 5 5 5 5 5 5 36 36 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 5 3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 53,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(23600, 128, 68)\n(23600, 128, 68)\n(23600, 128)\n(2950, 128, 68)\n(2950, 128, 68)\n(2950, 128)\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(train_target['label_ids'].shape)\n",
+        "print(train_target['label_mask'].shape)\n",
+        "print(train_input['input_ids'].shape)\n",
+        "print(val_target['label_ids'].shape)\n",
+        "print(val_target['label_mask'].shape)\n",
+        "print(val_input['input_ids'].shape)\n",
+        "\n",
+        "output_size = train_target['label_ids'].shape[-1]"
+      ]
+    },
+    {
+      "source": [
+        "## Build Model"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     },
     {
       "cell_type": "code",
@@ -162,10 +228,11 @@
         }
       },
       "source": [
-        "model = bert_model.build_Bert_token_classifier(HP.hub_model_name, \n",
+        "importlib.reload(bert_model)\n",
+        "model = bert_model.build_Bert_token_classifier(HP.bert_dir, \n",
         "                                               HP.output_layer, \n",
         "                                               HP.output_activation,\n",
-        "                                               output_size=68,  # dummy for now\n",
+        "                                               output_size=output_size,\n",
         "                                               time_distrib=HP.time_distrib,\n",
         "                                               bidirectional=HP.bidirectional, \n",
         "                                               seq_length=HP.max_seq_len,\n",
@@ -186,17 +253,6 @@
       },
       "source": [
         "tf.keras.utils.plot_model(model, show_shapes=True, dpi=64)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "cNgQePrgH1FU"
-      },
-      "source": [
-        ""
       ],
       "execution_count": null,
       "outputs": []
