Bug fix related to changed signature and names

--- a/Bert_Classifier.ipynb
+++ b/Bert_Classifier.ipynb
@@ -299,10 +299,10 @@
       "source": [
         "print(train_target['label_ids'].shape)\n",
         "print(train_target['label_mask'].shape)\n",
-        "print(train_input['input_ids'].shape)\n",
+        "print(train_input['input_word_ids'].shape)\n",
         "print(val_target['label_ids'].shape)\n",
         "print(val_target['label_mask'].shape)\n",
-        "print(val_input['input_ids'].shape)\n",
+        "print(val_input['input_word_ids'].shape)\n",
         "\n",
         "output_size = train_target['label_ids'].shape[-1]"
       ],
@@ -341,7 +341,7 @@
         "importlib.reload(hyperparameters)\n",
         "from model.hyperparameters import HP\n",
         "model, bert_encoder = bert_model.build_Bert_token_classifier(\n",
-        "    HP.bert_dir, output_size, HP.output_layer, HP.output_activation,\n",
+        "    HP.bert_dir, output_size, HP.output_layer,\n",
         "    time_distrib=HP.time_distrib, bidirectional=HP.bidirectional, \n",
         "    seq_length=HP.max_seq_len, dropout_rate=HP.dropout_rate)"
       ],
@@ -396,7 +396,7 @@
         "                                  train_target['label_ids'],\n",
         "                                  val_input,\n",
         "                                  val_target['label_ids'], \n",
-        "                                  train_input['input_ids'].shape[0],\n",
+        "                                  train_input['input_word_ids'].shape[0],\n",
         "                                  batch_size=HP.batch_size,\n",
         "                                  epochs=HP.epochs,\n",
         "                                  lr=HP.learning_rate)"
