--- a/Bert_Classifier.ipynb
+++ b/Bert_Classifier.ipynb
@@ -231,7 +231,7 @@
         "importlib.reload(preprocessing)\n",
         "\n",
         "DL = preprocessing.DataLoader(HP.data_dir, HP.bert_dir, HP.max_seq_len)\n",
-        "train_input, train_target, val_input, val_target = DL.get_train_data(use_invalid=True, print_ex=2)"
+        "train_input, train_target, val_input, val_target = DL.get_train_data(use_max_seq=True, print_ex=2)"
       ],
       "execution_count": 4,
       "outputs": [
@@ -470,7 +470,7 @@
         }
       },
       "source": [
-        "bert_model.evaluate(model, val_input, val_target)"
+        "bert_model.evaluate(model, val_input, val_target['label_ids'], val_dict['tag_seq'], DL.tag2id, HP.targ_seq_len)"
       ],
       "execution_count": 11,
       "outputs": [
