--- a/Bert_Classifier.ipynb
+++ b/Bert_Classifier.ipynb
@@ -506,7 +506,7 @@
         "model_name = \"\" #@param {type:\"string\"}\n",
         "\n",
         "model.save_weights(os.path.join(save_dir, f\"{model_name}.h5\"))\n",
-        "with open(os.path.join(save_dir, f\"{model_name}_history.json\", \"w\") as fp:\n",
+        "with open(os.path.join(save_dir, f\"{model_name}_history.json\"), \"w\") as fp:\n",
         "    json.dump(history.history, fp)"
       ]
     },
@@ -524,10 +524,35 @@
       },
       "source": [
         "test_input, test_target = DL.get_test_data(use_max_seq=True, print_ex=2)\n",
-        "bert_model.predict(model, test_input, test_target['label_mask'], DL.id2tag, HP.targ_seq_len)"
+        "bert_model.predict(model, test_input, test_target['label_mask'], DL.id2tag, fname='test_preds.csv', targ_seq_len=HP.targ_seq_len)"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "source": [
+        "## Code fragments for loading the model"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# new_model, new_bert_encoder = bert_model.build_Bert_token_classifier(\n",
+        "#     HP.bert_dir, output_size, HP.output_layer,\n",
+        "#     time_distrib=HP.time_distrib, bidirectional=HP.bidirectional, \n",
+        "#     seq_length=HP.max_seq_len, dropout_rate=HP.dropout_rate)\n",
+        "\n",
+        "# new_model.load_weights(\"path/to/model\")\n",
+        "\n",
+        "\n",
+        "# bert_model.evaluate(new_model, val_input, DL.val_dict['tag_seq'], val_target['label_mask'], DL.tag2id, HP.targ_seq_len)\n",
+        "# bert_model.predict(new_model, test_input, test_target['label_mask'], DL.id2tag, HP.targ_seq_len)"
+      ]
     }
   ]
 }
