Update notes and error fix

--- a/Bert_Classifier.ipynb
+++ b/Bert_Classifier.ipynb
@@ -128624,6 +128624,7 @@
         "\n",
         "# new_model.load_weights(\"path/to/model\")\n",
         "\n",
+        "# bug here: need to save and load DL.tag2id and DL.id2tag also, since the indices may differ by runtime.\n",
         "\n",
         "# bert_model.evaluate(new_model, val_input, DL.val_dict['tag_seq'], val_target['label_mask'], DL.tag2id, HP.targ_seq_len)\n",
         "# bert_model.predict(new_model, test_input, test_target['label_mask'], DL.id2tag, HP.targ_seq_len)"
